--- a/index.css
+++ b/index.css
@@ -6,7 +6,7 @@
 
 body{
     
-    background-image: url(images/weather.jpg);
+    background-image: url(weather.jpg);
     height: 100vh;
     width: 100vw;
 }
